--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>HTML5 : Hello World Example</title>
-    </head>
-    <body>
-        <h1>你好！牛雪芬</h1>
-        <p>
-            试着开始吧!
-        </p>
-    </body>
+<html>
+<head>
+	<title>hello world</title>
+</head>
+<body>
+	<div id="hello"></div>
+	<div id="world"></div>
+	<script src="./bundle.js"></script>
+</body>
 </html>
