--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>HTML5 : Hello World Example</title>
     </head>
     <body>
-        <h1>你好！牛学芬</h1>
+        <h1>你好！牛雪芬</h1>
         <p>
             试着开始吧!
         </p>
