--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="dist/index.css" />
 </head>
 <body class="font-hei" ontouchstart="">
-  <div id="container"></div>
+  <div id="container">hello</div>
   <script type="text/javascript" src="dist/vendor.js"></script>
   <script type="text/javascript" src="dist/index.js"></script></body>
 </body>
