--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,6 @@
   <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body class="font-hei">
-  <div id="container"></div>
+  <div id="container" class="container"></div>
 </body>
 </html>
