--- a/src/html/index_dev.html
+++ b/src/html/index_dev.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body class="font-hei" ontouchstart="">
-<div id="container"></div>
+<div id="container" class="container"></div>
 <script type="text/javascript" src="dist/vendor.js"></script>
 <script type="text/javascript" src="dist/index.js"></script>
 </body>
