--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no" />
   <link rel="shortcut icon" href="favicon.ico" />
-  <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link href="./dist/index.3f3d0a56.css" rel="stylesheet"></head>
+<link href="./dist/index.f8bc01f8.css" rel="stylesheet"></head>
 <body class="font-hei">
-  <div id="container" class="container"></div>
-<script type="text/javascript" src="./dist/vendor.10ee68a5.js"></script><script type="text/javascript" src="./dist/index.3f3d0a56.js"></script></body>
+  <div id="container"></div>
+<script type="text/javascript" src="./dist/vendor.10ee68a5.js"></script><script type="text/javascript" src="./dist/index.f8bc01f8.js"></script></body>
 </html>
