--- a/src/html/index_dev.html
+++ b/src/html/index_dev.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no" />
-<link rel="shortcut icon" href="favicon.ico" />
-<link rel="stylesheet" type="text/css" href="dist/index.css" />
-<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no" />
+	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="stylesheet" type="text/css" href="dist/index.css" />
 </head>
 <body class="font-hei" ontouchstart="">
-<div id="container" class="container"></div>
-<script type="text/javascript" src="dist/vendor.js"></script>
-<script type="text/javascript" src="dist/index.js"></script>
+	<div id="container"></div>
+	<script type="text/javascript" src="dist/vendor.js"></script>
+	<script type="text/javascript" src="dist/index.js"></script>
 </body>
 </html>
